; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_obj.c_mp_obj_get_array.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_obj.c_mp_obj_get_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mp_type_tuple = common dso_local global i32 0, align 4
@mp_type_list = common dso_local global i32 0, align 4
@MICROPY_ERROR_REPORTING = common dso_local global i64 0, align 8
@MICROPY_ERROR_REPORTING_TERSE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [20 x i8] c"expected tuple/list\00", align 1
@mp_type_TypeError = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [34 x i8] c"object '%s' isn't a tuple or list\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_obj_get_array(i32 %0, i64* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i32**, align 8
  store i32 %0, i32* %4, align 4
  store i64* %1, i64** %5, align 8
  store i32** %2, i32*** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @mp_obj_is_type(i32 %7, i32* @mp_type_tuple)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load i32, i32* %4, align 4
  %12 = load i64*, i64** %5, align 8
  %13 = load i32**, i32*** %6, align 8
  %14 = call i32 @mp_obj_tuple_get(i32 %11, i64* %12, i32** %13)
  br label %37

15:                                               ; preds = %3
  %16 = load i32, i32* %4, align 4
  %17 = call i64 @mp_obj_is_type(i32 %16, i32* @mp_type_list)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %15
  %20 = load i32, i32* %4, align 4
  %21 = load i64*, i64** %5, align 8
  %22 = load i32**, i32*** %6, align 8
  %23 = call i32 @mp_obj_list_get(i32 %20, i64* %21, i32** %22)
  br label %36

24:                                               ; preds = %15
  %25 = load i64, i64* @MICROPY_ERROR_REPORTING, align 8
  %26 = load i64, i64* @MICROPY_ERROR_REPORTING_TERSE, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %24
  %29 = call i32 @mp_raise_TypeError(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %35

30:                                               ; preds = %24
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @mp_obj_get_type_str(i32 %31)
  %33 = call i32 @mp_obj_new_exception_msg_varg(i32* @mp_type_TypeError, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i32 %32)
  %34 = call i32 @nlr_raise(i32 %33)
  br label %35

35:                                               ; preds = %30, %28
  br label %36

36:                                               ; preds = %35, %19
  br label %37

37:                                               ; preds = %36, %10
  ret void
}

declare dso_local i64 @mp_obj_is_type(i32, i32*) #1

declare dso_local i32 @mp_obj_tuple_get(i32, i64*, i32**) #1

declare dso_local i32 @mp_obj_list_get(i32, i64*, i32**) #1

declare dso_local i32 @mp_raise_TypeError(i8*) #1

declare dso_local i32 @nlr_raise(i32) #1

declare dso_local i32 @mp_obj_new_exception_msg_varg(i32*, i8*, i32) #1

declare dso_local i32 @mp_obj_get_type_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
